--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "build": "tsc --outDir dist",
+    "start": "node dist/index.js",
+    "start:dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "fastify": "^3.29.0"
@@ -13,5 +15,8 @@
     "@types/node": "^17.0.40",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
