--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "build": "tsc --outDir dist",
     "start": "node dist/index.js",
-    "start:dev": "ts-node src/index.ts"
+    "start:dev": "nodemon ./src/index.ts --ignore dist --exec \"yarn build && yarn start\""
   },
   "dependencies": {
+    "@prisma/client": "^3.15.0",
     "dotenv": "^16.0.1",
-    "fastify": "^3.29.0"
+    "fastify": "^3.29.0",
+    "fastify-plugin": "^3.0.1",
+    "prisma": "^3.15.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.40",
+    "@types/node": "^17.0.41",
+    "chalk": "^5.0.1",
+    "eslint": "^8.17.0",
+    "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
